diesel-builders/tests/ui_stable/ancestor_is_self_error.stderr
error: Table cannot be its own `ancestor`
 --> tests/ui_stable/ancestor_is_self_error.rs:5:25
  |
5 | #[table_model(ancestors(dogs))]
  |                         ^^^^
